v2/grammar.js
    source_file: $ => seq(
      optional($.namespace_declaration),
      repeat(choice(
        $.using_statement,
        $._object,
        $.preproc_conditional_object,
      )),
    ),

    // Preprocessor conditional wrapping entire objects or using statements
    namespace_declaration: $ => seq(
      $.namespace_keyword,
      field('name', $.namespace_name),
      ';'
    ),

    namespace_name: $ => prec.right(seq(
      $.identifier,
      repeat(seq('.', $.identifier))
    )),

    // --- Object types ---

    _object: $ => choice(
      $.table_declaration,
      $.tableextension_declaration,
      $.page_declaration,
      $.pageextension_declaration,
      $.pagecustomization_declaration,
      $.codeunit_declaration,
      $.report_declaration,
      $.reportextension_declaration,
      $.query_declaration,
      $.xmlport_declaration,
      $.enum_declaration,
      $.enumextension_declaration,
      $.interface_declaration,
      $.controladdin_declaration,
      $.dotnet_declaration,
      $.profile_declaration,
      $.profileextension_declaration,
      $.permissionset_declaration,
      $.permissionsetextension_declaration,
      $.entitlement_declaration,
      $.preproc_split_declaration,
    ),

    // Preprocessor-split object declaration:
    // #if ... codeunit 1 "Name" implements A #else codeunit 1 "Name" implements B #endif { body }
    // Also handles nested: #if A header1 #else #if B header2 #else header3 #endif #endif { body }
    codeunit_declaration: $ => seq(
      $.codeunit_keyword,
      field('object_id', $.integer),
      field('object_name', $._identifier_or_quoted),
      optional($.implements_clause),
      '{',
      repeat($._body_element),
      '}'
    ),

    _body_element: $ => choice(
      $.property,
      $.empty_statement,
      // Table internals
      $.fields_section,
      $.keys_section,
      $.fieldgroups_section,
      // Enum values
      $.enum_value_declaration,
      // Labels
      $.labels_section,
      // Page layout & actions
      $.layout_section,
      $.actions_section,
      $.views_section,
      // Report sections
      $.dataset_section,
      $.requestpage_section,
      $.rendering_section,
      // Query sections
      $.elements_section,
      // XMLport sections
      $.schema_section,
      // DotNet internals
      $.assembly_declaration,
      // Code structure
      $.procedure,
      $.trigger_declaration,
      $.var_section,
      $.attribute_item,
      // ControlAddIn event declarations
      $.event_declaration,
      // Preprocessor-split procedure: header variants in #if/#else, shared body
      $.preproc_split_procedure,
      // Preprocessor conditionals
      $.preproc_conditional,
      // Extension modifications (table/page extensions)
      $.modify_modification,
    ),

    decimal: $ => token(seq(/\d+/, '.', /\d+/)),

    // --- Caption value with sub-fields (Locked, Comment, MaxLength) ---
    // 'My Caption', Locked = true, Comment = 'text', MaxLength = 100
    // Also handles trailing comma: Caption = 'text',;
    // Uses property_name (scanner token) since the sub-fields follow Name = Value pattern
    type_specification: $ => choice(
      prec(2, $.array_type),
      prec(2, $.list_type),
      prec(2, $.dictionary_type),
      prec(1, $.text_type),
      prec(1, $.code_type),
      $.option_type,
      $.record_type,
      $.dotnet_type,
      $.object_reference_type,  // Codeunit, Page, Report, Query, Xmlport, Enum, Interface
      $.basic_type,
      $.identifier,             // Fallback for unknown types (HttpClient, DotNet, etc.)
      $.quoted_identifier,      // Quoted type references
    ),

    // Text[100] or plain Text
    text_type: $ => choice(
      prec(11, seq(kw('text'), '[', field('length', $.integer), ']')),
      prec(10, kw('text'))
    ),

    // Code[20] or plain Code
    code_type: $ => choice(
      prec(11, seq(kw('code'), '[', field('length', $.integer), ']')),
      prec(10, kw('code'))
    ),

    // Option with optional member list: Option OptionA, OptionB
    // Supports leading commas: Option ,,,,"Page","Query"
    option_type: $ => prec.right(1, seq(
      kw('option'),
      optional($.option_member_list)
    )),

    // Record "Customer" or Record Customer or Record 2000000041 [temporary]
    // Also: Record System.Reflection.Field temporary
    record_type: $ => prec.right(seq(
      prec(1, kw('record')),
      field('reference', $._namespaced_or_simple_ref),
      optional($.temporary_keyword)
    )),

    // DotNet "System.Text.StringBuilder" or DotNet System.DateTime type reference
    _namespaced_or_simple_ref: $ => choice(
      $.integer,
      prec.right(seq(
        $._identifier_or_quoted,
        repeat(seq('.', $._identifier_or_quoted))
      )),
    ),

    // array[10] of Integer, array[10,20] of Text[100]
    basic_type: $ => choice(
      // Numeric
      prec(1, kw('integer')),
      prec(1, kw('biginteger')),
      prec(1, kw('decimal')),
      prec(1, kw('byte')),
      // Text
      prec(1, kw('char')),
      prec(10, kw('label')),
      prec(1, kw('textbuilder')),
      prec(1, kw('textconst')),
      // Date/Time
      prec(1, kw('date')),
      prec(1, kw('time')),
      prec(1, kw('datetime')),
      prec(1, kw('duration')),
      kw('dateformula'),
      // Core
      prec(1, kw('boolean')),
      prec(1, kw('guid')),
      prec(1, kw('blob')),
      prec(1, kw('recordid')),
      prec(1, kw('recordref')),
      prec(1, kw('fieldref')),
      prec(1, kw('variant')),
      prec(1, kw('dialog')),
      prec(1, kw('action')),
      prec(1, kw('secrettext')),
      // JSON
      prec(1, kw('jsontoken')),
      prec(1, kw('jsonvalue')),
      prec(1, kw('jsonarray')),
      prec(1, kw('jsonobject')),
      // Media
      prec(1, kw('media')),
      prec(1, kw('mediaset')),
      // Stream
      prec(1, kw('instream')),
      prec(1, kw('outstream')),
      // HTTP
      prec(1, kw('httpclient')),
      prec(1, kw('httpcontent')),
      prec(1, kw('httpheaders')),
      prec(1, kw('httprequestmessage')),
      prec(1, kw('httpresponsemessage')),
      // Notification
      prec(1, kw('notification')),
      // Filter/Table
      prec(1, kw('filterpagebuilder')),
      prec(1, kw('tablefilter')),
      prec(1, kw('tableconnectiontype')),
      // XML
      prec(1, kw('xmldocument')),
      prec(1, kw('xmlelement')),
      prec(1, kw('xmlnode')),
      prec(1, kw('xmlnodelist')),
      prec(1, kw('xmlattribute')),
      // Error/Session
      prec(1, kw('errorinfo')),
      prec(1, kw('sessionsettings')),
      // File
      prec(1, kw('file')),
      prec(1, kw('fileupload')),
      // Other common types
      prec(1, kw('moduleinfo')),
      prec(1, kw('verbosity')),
      prec(1, kw('datatransfer')),
      prec(1, kw('version')),
      // Web
      prec(1, kw('webserviceactioncontext')),
    ),

    // =====================================================================
    // Enum values
    // =====================================================================

    // value(0; "None") { Caption = 'None'; }
    procedure: $ => prec.right(seq(
      optional(field('modifier', $.procedure_modifier)),
      $.procedure_keyword,
      field('name', $._identifier_or_quoted),
      '(',
      optional($.parameter_list),
      ')',
      optional(choice(
        seq(
          choice(
            $._procedure_return_specification,
            $._procedure_named_return,
          ),
          optional(';')
        )
      )),
      optional(';'),
      optional(choice(
        $.var_section,
        $.preproc_conditional_var_block,
      )),
      $.code_block
    )),

    // Preprocessor-split procedure: header variants in #if/#else, shared body
    procedure_modifier: $ => choice(
      $.local_keyword,
      $.internal_keyword,
      $.protected_keyword,
    ),

    // Return type: `: TypeSpec`
    _procedure_return_specification: $ => seq(
      ':',
      field('return_type', $.type_specification),
    ),

    // Named return: `result: TypeSpec`
    _procedure_named_return: $ => prec(15, seq(
      field('return_value', $._identifier_or_quoted),
      $._procedure_return_specification,
    )),

    // Parameter list: semicolon-separated parameters
    parameter_list: $ => seq(
      optional(repeat1($.attribute_item)),
      $.parameter,
      repeat(seq(';', optional(repeat1($.attribute_item)), $.parameter)),
    ),

    parameter: $ => seq(
      optional(field('modifier', $.var_keyword)),
      field('name', $._identifier_or_quoted),
      ':',
      field('type', $.type_specification),
    ),

    // code_block: begin ... end;
    // Using kw() for begin/end — anonymous tokens, NOT named rules
    code_block: $ => prec.right(seq(
      kw('begin'),
      repeat($._statement),
      kw('end'),
      optional(';'),
    )),

    // =====================================================================
    // Triggers
    // =====================================================================

    trigger_declaration: $ => seq(
      $.trigger_keyword,
      field('name', $._trigger_name),
      '(',
      optional($.parameter_list),
      ')',
      optional(choice(
        $._procedure_return_specification,
        $._procedure_named_return,
      )),
      optional(';'),
      optional(choice(
        $.var_section,
        $.preproc_conditional_var_block,
      )),
      $.code_block
    ),

    // Preprocessor conditional wrapping a var section before begin
    _trigger_name: $ => choice(
      seq($._identifier_or_quoted, '::', $._identifier_or_quoted),
      $._identifier_or_quoted,
    ),

    // =====================================================================
    // Variable declarations
    // =====================================================================

    var_section: $ => prec.right(seq(
      optional(choice($.protected_keyword, $.local_keyword)),
      $.var_keyword,
      repeat(choice(
        $.variable_declaration,
        $.attribute_item,
        $.preproc_conditional_var,
        $.preproc_split_procedure,
      )),
    )),

    variable_declaration: $ => choice(
      // Label variable: Name: Label 'text', Locked = true;
      prec(5, seq(
        field('name', $._identifier_or_quoted),
        ':',
        field('type', $.basic_type),  // Must be Label type
        field('value', $.string_literal),
        optional(seq(
          ',',
          optional(seq(
            $.label_attribute,
            repeat(seq(',', $.label_attribute))
          ))
        )),
        ';'
      )),
      // Multi-name variable: Name1, Name2, Name3 : Type;
      prec(3, seq(
        field('name', $._identifier_or_quoted),
        repeat1(seq(',', field('name', $._identifier_or_quoted))),
        ':',
        field('type', $.type_specification),
        ';'
      )),
      // Regular variable: Name: Type;
      prec(1, seq(
        field('name', $._identifier_or_quoted),
        ':',
        field('type', $.type_specification),
        ';'
      )),
    ),

    _statement: $ => prec.right(seq(
      choice(
        $.assignment_statement,
        $.asserterror_statement,
        $.if_statement,
        $.exit_statement,
        $.continue_statement,
        $.break_statement,
        $.case_statement,
        $.for_statement,
        $.repeat_statement,
        $.while_statement,
        $.foreach_statement,
        $.with_statement,
        $._expression_statement,
        $.empty_statement,
        $.preproc_conditional_statement,
        $.preproc_split_if_statement,
        $.preproc_split_if_else_statement,
        $.preproc_split_if_then_begin,
        $.preproc_guarded_statement,
      ),
      optional(';')
    )),

    assignment_statement: $ => prec.dynamic(10, seq(
      field('left', $._expression),
      field('operator', $._assignment_operator),
      field('right', $._expression)
    )),

    _assignment_operator: $ => token(choice(':=', '+=', '-=', '*=', '/=')),

    // --- If/Then/Else ---

    if_statement: $ => prec.right(seq(
      $.if_keyword,
      field('condition', $._expression),
      $.then_keyword,
      field('then_branch', choice(
        $.code_block,
        $._statement,
      )),
      optional(seq(
        $.else_keyword,
        field('else_branch', choice(
          $.code_block,
          prec(1, $.if_statement),
          $._statement,
        ))
      ))
    )),

    // --- Case ---

    _expression: $ => choice(
      // Binary operators
      $.range_expression,
      $.multiplicative_expression,
      $.additive_expression,
      $.comparison_expression,
      $.logical_expression,
      // In expression
      prec.left(5, seq(
        field('left', $._expression),
        field('operator', $.in_keyword),
        field('right', $.list_literal)
      )),
      // Is expression (type checking)
      prec.left(5, seq(
        field('left', $._expression),
        field('operator', kw('is', 5)),
        field('right', $.type_specification)
      )),
      // As expression (type casting)
      prec.left(5, seq(
        field('left', $._expression),
        field('operator', kw('as', 5)),
        field('right', $.type_specification)
      )),
      // Other expression forms
      $.qualified_enum_value,
      $.database_reference,
      $.call_expression,
      $.member_expression,
      $.subscript_expression,
      $.identifier,
      $.quoted_identifier,
      $._literal_value,
      $.parenthesized_expression,
      $.unary_expression,
      $.list_literal,
      // Keywords that can be used as identifiers in expressions
      $.keyword_identifier,
      // 'continue' as identifier when followed by ':='
      alias($.continue_as_identifier, $.identifier),
      // Ternary expression: condition ? then_value : else_value
      $.ternary_expression,
      // Assignment as expression (for asserterror and other contexts)
      prec.left(1, $.assignment_expression),
    ),

    // Keywords that can appear as identifiers in expressions (e.g., Codeunit.Run())
    keyword_identifier: $ => prec(-5, choice(
      $.codeunit_keyword,
      $.page_keyword,
      $.report_keyword,
      $.query_keyword,
      $.xmlport_keyword,
      kw('record'),
      $.enum_keyword,
      kw('system'),
      kw('session'),
      kw('dialog'),
      kw('database'),
      kw('file'),
      kw('action'),
    )),

    // --- Binary expressions ---

    comparison_expression: $ => prec.left(4, seq(
      field('left', $._expression),
      field('operator', $.comparison_operator),
      field('right', $._expression)
    )),

    comparison_operator: $ => choice(
      '>=',
      '<=',
      '>',
      '<',
      '<>',
      '='
    ),

    unary_expression: $ => prec.right(7, seq(
      field('operator', choice('+', '-', choice('not', 'NOT', 'Not'))),
      field('operand', $._expression)
    )),

    // --- Postfix expressions ---

    call_expression: $ => prec(12, seq(
      field('function', choice(
        $.identifier,
        $.member_expression,
        $.qualified_enum_value,
        $.keyword_identifier,     // System(), Dialog(), etc.
        $.subscript_expression,   // X[1]()
      )),
      field('arguments', $.argument_list)
    )),

    argument_list: $ => seq(
      '(',
      optional(seq(
        $._expression,
        repeat(seq(',', $._expression))
      )),
      ')'
    ),

    member_expression: $ => prec.left(11, seq(
      field('object', $._expression),
      '.',
      field('member', $._identifier_or_quoted)
    )),

    biginteger_literal: $ => token(prec(1, /\d+L/)),

    // =====================================================================
    // Named keyword rules
    // =====================================================================

    // --- Tier 1: Control flow ---

    if_keyword: $ => prec(10, choice('if', 'IF', 'If')),
    then_keyword: $ => prec(10, choice('then', 'THEN', 'Then')),
    page_keyword: $ => kw('page'),
