v2/test/corpus/built_in_functions_date_and_time.txt
==================
Built-in Functions Date and Time
==================

codeunit 50100 "Built-in Functions Test"
{
    local procedure TestDateTimeFunctions()
    var
        DT: DateTime;
        D: Date;
        T: Time;
    begin
        DT := CURRENTDATETIME;
        D := CurrentDate;
        T := CURRENTTIME;
        D := Today;
        D := WorkDate;
        DT := CreateDateTime(D, T);
        T := Time(12, 0, 0);
    end;
}

---

(source_file
  (codeunit_declaration
    (codeunit_keyword)
    (integer)
    (quoted_identifier)
    (procedure
      (procedure_modifier
        (local_keyword))
      (procedure_keyword)
      (identifier)
      (var_section
        (var_keyword)
        (variable_declaration
          (identifier)
          (type_specification
            (basic_type)))
        (variable_declaration
          (identifier)
          (type_specification
            (basic_type)))
        (variable_declaration
          (identifier)
          (type_specification
            (basic_type))))
      (code_block
        (assignment_statement
          (identifier)
          (identifier))
        (assignment_statement
          (identifier)
          (identifier))
        (assignment_statement
          (identifier)
          (identifier))
        (assignment_statement
          (identifier)
          (identifier))
        (assignment_statement
          (identifier)
          (identifier))
        (assignment_statement
          (identifier)
          (call_expression
            (identifier)
            (argument_list
              (identifier)
              (identifier))))
        (assignment_statement
          (identifier)
          (call_expression
            (identifier)
            (argument_list
              (integer)
              (integer)
              (integer))))))))
