v2/test/corpus/built_in_functions_simple.txt
==================
Built-in Functions Simple
==================

codeunit 50100 "Built-in Functions Test"
{
    trigger OnRun()
    begin
        TestDateTimeFunctions();
        TestSystemFunctions();
        TestMathFunctions();
        TestStringFunctions();
        TestDatabaseFunctions();
    end;
}

---

(source_file
  (codeunit_declaration
    (codeunit_keyword)
    (integer)
    (quoted_identifier)
    (trigger_declaration
      (trigger_keyword)
      (identifier)
      (code_block
        (call_expression
          (identifier)
          (argument_list))
        (call_expression
          (identifier)
          (argument_list))
        (call_expression
          (identifier)
          (argument_list))
        (call_expression
          (identifier)
          (argument_list))
        (call_expression
          (identifier)
          (argument_list))))))
